load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "helper_go",
    srcs = ["helper.go"],
    importpath = "github.com/bpalermo/galaxy/lib/helper_go",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_google_uuid//:uuid",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//metadata",
        "@org_golang_google_grpc//status",
    ],
)
