load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")
load("@rules_proto_grpc//rust:common.bzl", "create_name_to_label")

package(default_visibility = ["//visibility:public"])

rust_library(
    name = "util_lib",
    srcs = glob(["**/*.rs"]),
    deps = [
        "//api/galaxy/service/ledger/v1:ledger_v1_rust",
        "//api/galaxy/types/v1:types_v1_rust",
        "@crate_index//:num-traits",
        "@crate_index//:rust_decimal",
        "@crate_index//:uuid",
        create_name_to_label("tonic"),
    ],
)

rust_test(
    name = "unit_test",
    crate = ":util_lib",
    deps = [
        "@crate_index//:tokio",
        create_name_to_label("tonic"),
    ],
)
