load("@io_bazel_rules_docker//container:container.bzl", "container_image")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")

pkg_tar(
    name = "protos_tar",
    srcs = [
        "//api/galaxy/service/ledger/v1:ledger_proto",
    ],
    package_dir = "/protos",
)

container_image(
    name = "gw_amd64",
    base = "@envoy_amd64//image",
    tars = [
        ":protos_tar",
    ],
)
