load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test", "rust_test_suite")

package(default_visibility = ["//service/ledger:__subpackages__"])

rust_library(
    name = "ledger_core",
    srcs = glob(["**/*.rs"]),
    proc_macro_deps = [
        "@crate_index//:serde_derive",
    ],
    deps = [
        "//lib/util_rust",
        "//service/ledger/migration:migration_lib",
        "@crate_index//:figment",
        "@crate_index//:log",
        "@crate_index//:once_cell",
        "@crate_index//:sea-orm",
        "@crate_index//:serde",
        "@crate_index//:uuid",
    ],
)

rust_test(
    name = "unit_test",
    crate = ":ledger_core",
    deps = [
        "//lib/util_rust",
        "@crate_index//:mockall",
        "@crate_index//:tokio",
    ],
)

rust_test_suite(
    name = "integrated_test",
    size = "large",
    srcs = glob(["tests/**/*.rs"]),
    deps = [
        ":ledger_core",
        "//lib/test_util_rust",
        "//lib/util_rust",
        "//service/ledger/migration:migration_lib",
        "@crate_index//:env_logger",
        "@crate_index//:log",
        "@crate_index//:sea-orm",
        "@crate_index//:testcontainers",
        "@crate_index//:tokio",
        "@crate_index//:uuid",
    ],
)
