load("@rules_rust//rust:defs.bzl", "rust_library")

package(default_visibility = ["//service/ledger:__subpackages__"])

rust_library(
    name = "ledger_server",
    srcs = glob(["src/**/*.rs"]),
    deps = [
        "//api/galaxy:rust_default_library",
        "//lib/util_rust:util_lib",
        "//service/ledger/ledger_core",
        "@crate_index//:log",
        "@crate_index//:prost",
        "@crate_index//:tonic",
        "@crate_index//:tonic-health",
        "@crate_index//:uuid",
    ],
)
