load("@rules_rust//rust:defs.bzl", "rust_binary")
load("@io_bazel_rules_docker//rust:image.bzl", "rust_image")

package(default_visibility = ["//service/ledger:__subpackages__"])

filegroup(
    name = "config",
    srcs = glob(["config/*.toml"]),
)

rust_binary(
    name = "binary",
    srcs = glob(["src/**/*.rs"]),
    data = [
        ":config",
    ],
    rustc_flags = [
        "-C",
        "target-feature=+crt-static",
    ],
    deps = [
        "//service/ledger/ledger_core",
        "//service/ledger/ledger_server",
        "@crate_index//:env_logger",
        "@crate_index//:log",
        "@crate_index//:tokio",
    ],
)

rust_image(
    name = "image",
    binary = ":binary",
    data = [":config"],
)
