load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")
load("@rules_proto_grpc//rust:defs.bzl", "rust_prost_proto_library")

package(default_visibility = ["//visibility:public"])

# gazelle:proto_strip_import_prefix /api
proto_library(
    name = "money_proto",
    srcs = ["money.proto"],
    strip_import_prefix = "/api",
)

go_proto_library(
    name = "v1_go_proto",
    importpath = "github.com/bpalermo/galaxy-api/types/v1",
    proto = ":money_proto",
)

go_library(
    name = "types",
    embed = [":v1_go_proto"],
    importpath = "github.com/bpalermo/galaxy-api/types/v1",
)

rust_prost_proto_library(
    name = "types_v1_rust",
    declared_proto_packages = ["galaxy.types.v1"],
    protos = [
        ":money_proto",
    ],
)
