load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")

IMPORT_PATH = "github.com/bpalermo/galaxy/service/gateway/cmd/server"

go_library(
    name = "server_lib",
    srcs = ["main.go"],
    importpath = "github.com/bpalermo/galaxy/service/gateway/cmd/server",
    visibility = ["//visibility:private"],
    deps = [
        "//service/gateway/pkg/server",
        "@com_github_sirupsen_logrus//:logrus",
    ],
)

go_binary(
    name = "server",
    embed = [":server_lib"],
    visibility = ["//visibility:public"],
)

go_image(
    name = "server_image",
    binary = ":server",
)

go_test(
    name = "server_test",
    srcs = ["main_test.go"],
    embed = [":server_lib"],
)
