load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "server",
    srcs = ["server.go"],
    importpath = "github.com/bpalermo/galaxy/service/gateway/pkg/server",
    visibility = ["//visibility:public"],
    deps = [
        "//api/galaxy/service/gateway/v1:gateway",
        "//api/galaxy/service/ledger/v1:ledger",
        "//service/gateway/pkg/service",
        "@com_github_grpc_ecosystem_grpc_gateway_v2//runtime",
        "@com_github_rs_zerolog//log",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//credentials/insecure",
        "@org_golang_google_grpc//status",
    ],
)

go_test(
    name = "server_test",
    srcs = ["server_test.go"],
    embed = [":server"],
)
