load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "service",
    srcs = ["ledger.go"],
    importpath = "github.com/bpalermo/galaxy/service/gateway/pkg/service",
    visibility = ["//visibility:public"],
    deps = [
        "//api/galaxy/service/ledger/v1:ledger",
        "@com_github_rs_zerolog//log",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//credentials/insecure",
    ],
)
