load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "service",
    srcs = [
        "base.go",
        "ledger.go",
    ],
    importpath = "github.com/bpalermo/galaxy/service/gateway/pkg/service",
    visibility = ["//visibility:public"],
    deps = [
        "//api/galaxy/service/ledger/v1:ledger",
        "@com_github_rs_zerolog//log",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//credentials/insecure",
        "@org_golang_google_grpc//metadata",
        "@org_golang_google_grpc//status",
    ],
)

go_test(
    name = "service_test",
    srcs = ["base_test.go"],
    embed = [":service"],
    deps = [
        "@com_github_stretchr_testify//assert:go_default_library",
        "@org_golang_google_grpc//metadata",
    ],
)
