load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@rules_buf//buf:defs.bzl", "buf_lint_test")
load("@rules_proto//proto:defs.bzl", "proto_library")

package(default_visibility = ["//visibility:public"])

# gazelle:proto_strip_import_prefix /api
proto_library(
    name = "v1_proto",
    srcs = ["service.proto"],
    strip_import_prefix = "/api",
    visibility = ["//visibility:public"],
    deps = [
        "//api/galaxy/service/ledger/v1:v1_proto",
        "@go_googleapis//google/api:annotations_proto",
    ],
)

#gazelle:go_grpc_compilers @io_bazel_rules_go//proto:go_grpc,@dev_palermo_galaxy//bazel/grpc-gateway:go_gen_grpc_gateway
go_proto_library(
    name = "v1_go_proto",
    compilers = [
        "@io_bazel_rules_go//proto:go_grpc",
        "@dev_palermo_galaxy//bazel/grpc-gateway:go_gen_grpc_gateway",
    ],
    importpath = "github.com/bpalermo/galaxy-api/service/gateway/v1",
    proto = ":v1_proto",
    visibility = ["//visibility:public"],
    deps = [
        "//api/galaxy/service/ledger/v1:ledger",
        "@go_googleapis//google/api:annotations_go_proto",
    ],
)

go_library(
    name = "gateway",
    embed = [":v1_go_proto"],
    importpath = "github.com/bpalermo/galaxy-api/service/gateway/v1",
)

buf_lint_test(
    name = "v1_proto_lint",
    config = "//api:buf.yaml",
    targets = [":v1_proto"],
)
