load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@rules_buf//buf:defs.bzl", "buf_lint_test")
load("@rules_proto//proto:defs.bzl", "proto_library")

package(default_visibility = ["//visibility:public"])

filegroup(
    name = "proto_files",
    data = glob(["*.proto"]),
    visibility = ["//api/galaxy:__pkg__"],
)

exports_files(["service.proto"])

# gazelle:proto_strip_import_prefix /api
proto_library(
    name = "v1_proto",
    srcs = ["service.proto"],
    strip_import_prefix = "/api",
    deps = [
        "//api/galaxy/type:money_proto",
        "//api/galaxy/type/account/v1:account_proto",
    ],
)

go_proto_library(
    name = "v1_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/bpalermo/galaxy-api/service/ledger/v1",
    proto = ":v1_proto",
    deps = [
        "//api/galaxy/type:money",
        "//api/galaxy/type/account/v1:account",
    ],
)

go_library(
    name = "ledger",
    embed = [
        ":v1_go_proto",
    ],
    importpath = "github.com/bpalermo/galaxy-api/service/ledger/v1",
)

buf_lint_test(
    name = "v1_proto_lint",
    config = "//api:buf.yaml",
    targets = [":v1_proto"],
)
