load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

package(default_visibility = ["//visibility:public"])

filegroup(
    name = "proto_files",
    data = glob(["*.proto"]),
    visibility = ["//api/galaxy:__pkg__"],
)

exports_files(["service.proto"])

# gazelle:proto_strip_import_prefix /api
proto_library(
    name = "ledger_proto",
    srcs = ["service.proto"],
    strip_import_prefix = "/api",
    deps = [
        "//api/galaxy/type:money_proto",
        "//api/galaxy/type/account/v1:account_proto",
        "@com_github_envoyproxy_protoc_gen_validate//validate:validate_proto",
        "@go_googleapis//google/api:annotations_proto",
    ],
)

# gazelle:go_grpc_compilers //bazel/pgv:pgv_plugin_go, @io_bazel_rules_go//proto:go_grpc
go_proto_library(
    name = "ledger_go_proto",
    compilers = [
        "@io_bazel_rules_go//proto:go_grpc",
        "//bazel/pgv:pgv_plugin_go",
    ],
    importpath = "github.com/bpalermo/galaxy-api/service/ledger/v1",
    proto = ":ledger_proto",
    deps = [
        "//api/galaxy/type:money",
        "//api/galaxy/type/account/v1:account",
        "@com_github_envoyproxy_protoc_gen_validate//validate:validate_go_proto",
        "@go_googleapis//google/api:annotations_go_proto",
    ],
)

go_library(
    name = "ledger",
    embed = [
        ":ledger_go_proto",
    ],
    importpath = "github.com/bpalermo/galaxy-api/service/ledger/v1",
)
