load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

package(default_visibility = ["//visibility:public"])

filegroup(
    name = "proto_files",
    data = glob(["*.proto"]),
    visibility = ["//api/galaxy:__pkg__"],
)

# gazelle:proto_strip_import_prefix /api
proto_library(
    name = "v1_proto",
    srcs = [
        "message.proto",
        "service.proto",
    ],
    strip_import_prefix = "/api",
)

go_proto_library(
    name = "v1_go_proto",
    compilers = [
        "@io_bazel_rules_go//proto:go_grpc",
    ],
    importpath = "github.com/bpalermo/galaxy-api/service/mailer/v1",
    proto = ":v1_proto",
)

go_library(
    name = "mailer",
    embed = [":v1_go_proto"],
    importpath = "github.com/bpalermo/galaxy-api/service/mailer/v1",
)
