load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")

package(default_visibility = ["//visibility:public"])

exports_files(["account.proto"])

filegroup(
    name = "proto_files",
    data = glob(["*.proto"]),
    visibility = ["//api/galaxy:__pkg__"],
)

# gazelle:proto_strip_import_prefix /api
proto_library(
    name = "account_proto",
    srcs = ["account.proto"],
    strip_import_prefix = "/api",
    deps = [
        "//api/galaxy/type:money_proto",
        "@com_google_protobuf//:timestamp_proto",
    ],
)

go_proto_library(
    name = "v1_go_proto",
    importpath = "github.com/bpalermo/galaxy-api/type/account/v1",
    proto = ":account_proto",
    deps = ["//api/galaxy/type:money"],
)

go_library(
    name = "account",
    embed = [":v1_go_proto"],
    importpath = "github.com/bpalermo/galaxy-api/type/account/v1",
)
