load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@rules_proto_grpc//rust:defs.bzl", "rust_prost_proto_library")

package(default_visibility = ["//visibility:public"])

# gazelle:proto_strip_import_prefix /api
proto_library(
    name = "account_proto",
    srcs = ["account.proto"],
    strip_import_prefix = "/api",
    deps = [
        "//api/galaxy/types/v1:money_proto",
        "@com_google_protobuf//:timestamp_proto",
    ],
)

go_proto_library(
    name = "v1_go_proto",
    importpath = "github.com/bpalermo/galaxy-api/types/account/v1",
    proto = ":account_proto",
    deps = ["//api/galaxy/types/v1:types"],
)

go_library(
    name = "account",
    embed = [":v1_go_proto"],
    importpath = "github.com/bpalermo/galaxy-api/types/account/v1",
)

rust_prost_proto_library(
    name = "account_v1_rust",
    declared_proto_packages = ["galaxy.types.account.v1"],
    prost_proto_deps = [
        "//api/galaxy/types/v1:types_v1_rust",
    ],
    protos = [
        ":account_proto",
    ],
)
