load("@dev_palermo_galaxy//bazel/spring:deps.bzl", "SPRING_BOOT_API_TEST_DEPS")

java_library(
    name = "base_rest_test_library",
    testonly = True,
    srcs = ["BaseRestTest.java"],
    visibility = ["//service/mailer/src/test:__subpackages__"],
    deps = SPRING_BOOT_API_TEST_DEPS + [
        "//service/mailer/src/main:app_library",
    ],
)

java_test(
    name = "app_test",
    srcs = ["AppTest.java"],
    test_class = "dev.palermo.galaxy.service.mailer.AppTest",
    deps = SPRING_BOOT_API_TEST_DEPS + [
        "//service/mailer/src/main:app_library",
    ],
)
