load("@dev_palermo_galaxy//bazel/spring:deps.bzl", "SPRING_BOOT_API_TEST_DEPS")

java_test(
    name = "greet_test",
    srcs = ["GreetResourceTest.java"],
    test_class = "dev.palermo.galaxy.service.mailer.resource.GreetResourceTest",
    deps = SPRING_BOOT_API_TEST_DEPS + [
        "//service/mailer/src/main:app_library",
    ],
)
